--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -127,7 +127,7 @@
                 <a class="nav-link" th:href="@{/tutorpracticas/alumno}">
                     <i class="bi bi-person-badge me-2"></i>Mis Alumnos
                 </a>
-                 <a th:href="@{/incidencias/listar}	" class="nav-link">
+                 <a th:href="@{/incidencia/listar}	" class="nav-link">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencia
                  </a>
                  <a th:href="@{/enconstruccion}	" class="nav-link">
