--- a/src/main/resources/templates/empresa/listar.html
+++ b/src/main/resources/templates/empresa/listar.html
@@ -1,4 +1,3 @@
-<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"> -->
 
 <div th:fragment="content">
@@ -132,3 +131,8 @@
         </div>
     </div>
 </div>
+<th:block th:fragment="scripts">
+    <script>
+     console.log('Script cargado');
+    </script>
+</th:block>
