--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -203,6 +203,8 @@
 
 
     </div>
+    	<!-- Stripts de cada pagina -->
+        <th:block th:replace="${viewName} :: scripts"></th:block>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script th:inline="javascript">
